<resources>
    <string name="app_name">NetConsul</string>

    <string name="navigation_drawer_open">Abrir nevegação</string>
    <string name="navigation_drawer_close">Fechar nevegação</string>

    <string name="action_settings">Configurações</string>
    <string name="adicionar">Adicionar</string>
    <string name="filtrar">Filtrar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>


    <!-- menu lateral-->
    <string name="planilha">Planilha</string>
    <string name="planilhas">Planilhas</string>
    <string name="temperatura">Temperatura</string>
    <string name="temperaturas">Temperaturas</string>
    <string name="title_activity_login">Entrar</string>
    <string name="clientes">Clientes</string>
    <string name="cliente">Cliente</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_usuario">Usuário</string>



    <!-- pesquisa planilha -->
    <string name="prompt_cliente">Cliente</string>
    <string name="prompt_responsavel">Responsável</string>
    <string name="prompt_dt_inicio">Data início</string>
    <string name="prompt_dt_fim">Data fim</string>
    <string name="pesquisar">Pesquisar</string>
    
    
    <!--home -->
    <string name="home_bom_dia">Bom dia</string>
    <string name="home_boa_tarde">Boa tarde</string>
    <string name="home_boa_noite">Boa noite</string>
    <string name="home_mensagem">Bem-vindo a NETCONSUL - Consultoria em Rede</string>
    <string name="home_msg_menu">Use o menu lateral para prosseguir com o sistema.</string>


    <!--temperatura-->
    <string name="data">Data</string>
    <string name="equipamento">Equipamento</string>
    <string name="acao_corretiva">Ação Corretiva?</string>
    <string name="responsavel">Responsável</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
