<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/planilha_pesquisa_cliente" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_cliente"
            android:inputType="textAutoComplete" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView android:id="@+id/planilha_pesquisa_responsavel" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_responsavel"
            android:inputType="textAutoComplete" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <!--<android.support.design.widget.TextInputLayout android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<Spinner-->
            <!--android:id="@+id/planilha_pesquisa_dt_inicio"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:clickable="false"-->
            <!--android:hint="@string/prompt_dt_inicio"-->
            <!--/>-->

        <!-- -->
    <!--</android.support.design.widget.TextInputLayout>-->

    <fr.ganfra.materialspinner.MaterialSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planilha_pesquisa_dt_inicio"
        app:ms_hint="@string/prompt_dt_inicio">

    </fr.ganfra.materialspinner.MaterialSpinner>


    <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/pesquisar"
        android:textStyle="bold" />

</LinearLayout>