<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.gravata.netconsul.fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/home_bom_dia"
        android:id="@+id/home_saudacao"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="nome"
        android:id="@+id/home_nome"
        android:layout_alignBottom="@id/home_saudacao"
        android:layout_toRightOf="@id/home_saudacao"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/home_mensagem"
        android:id="@+id/home_mensagem"
        android:layout_below="@+id/home_saudacao"
        android:layout_alignLeft="@+id/home_saudacao"
        android:layout_alignStart="@+id/home_saudacao"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/home_msg_menu"
        android:id="@+id/home_msg_menu"
        android:layout_below="@+id/home_mensagem"
        android:layout_alignLeft="@+id/home_mensagem"
        android:layout_alignStart="@+id/home_mensagem"
        android:layout_marginTop="15dp"/>


</RelativeLayout>
